複素フーリエに関する部分がガバガバだったので修正

--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ div.input-row{
 .err{
     background-color: #fbb !important;
 }
+.warn{
+    background-color: #fc7 !important;
+}
 #start{
     float: left;
     width : 100px;
